# webcam-capture-driver-native

./: .gitmodules  LICENSE  LICENSE_THIRD_PARTY  README.md
src/: CMakeLists.txt
src/java/driver/com/github/sarxos/webcam/ds/nativeapi/: NativeWebcamDevice.java  NativeWebcamDriver.java
src/jni/: com_github_sarxos_webcam_ds_nativeapi_NativeWebcamDevice.cpp  com_github_sarxos_webcam_ds_nativeapi_NativeWebcamDriver.cpp
src/test/: WebcamCaptureTestCaptureToFile.cpp  WebcamCaptureTestShowCapturedFile.java  WebcamCaptureTestUseNativeDriver.java
